Basic layout for profile.

--- a/html/profile.html
+++ b/html/profile.html
@@ -84,6 +84,11 @@
         </nav>
 
         <!-- Main -->
+        <div class="ctn-search">
+            <label for="tb-search"></label>
+            <input class="box-search" id="tb-search" placeholder="Meow, name?" type="text">
+            <i class="fas fa-search ico-search" id="ico-search" onclick=""></i>
+        </div>
         <div class="card-ctn">
             <div class="card">
                 <div class="img">
