--- a/html/profile.html
+++ b/html/profile.html
@@ -118,6 +118,8 @@
                         <a href="" id="link-character">
                             <button class="follow">Wiki</button>
                         </a>
+
+                        <!-- Don't change this :), who change it I'm going to give who suprise :)) -->
                         <a href="https://github.com/CosmiWaiHang">
                             <button class="view">Surprise!</button>
                         </a>
