Add profile page to navbar.

--- a/html/profile.html
+++ b/html/profile.html
@@ -48,9 +48,9 @@
                        src="../asset/lottie/loading-morandi-50.json"></lottie-player>
 
         <nav class="navbar-expand-custom navbar-mainbg" id="navbar">
-            <a class="navbar-brand navbar-logo" href="#"><img alt="game logo"
-                                                              src="../asset/img/Asset 52.png"
-                                                              style="max-width: 60px; max-height: 100px;"></a>
+            <a class="navbar-brand navbar-logo" href="#">
+                <img alt="game logo" src="../asset/img/Asset 52.png" style="max-width: 60px; max-height: 100px;">
+            </a>
             <button aria-controls="navbar-content"
                     aria-expanded="false"
                     aria-label="toggle navigation"
@@ -68,16 +68,19 @@
                         <a class="nav-link" href="../index.html"><i class="fas fa-home"></i>Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../html/summon.html"><i class="fas fa-users"></i>Summon</a>
+                        <a class="nav-link" href="summon.html"><i class="fas fa-users"></i>Summon</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../html/characterprofile.html"><i class="far fa-address-book"></i>Character</a>
+                        <a class="nav-link" href="profile.html"><i class="far fa-address-book"></i>Character</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../html/topup.html"><i class="fas fa-tachometer-alt"></i>TopUp</a>
+                        <a class="nav-link" href="statistics.html"><i class="far fa-chart-bar"></i>Statistics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="topup.html"><i class="fas fa-tachometer-alt"></i>TopUp</a>
                     </li>
                     <li class="nav-item" id="navbar-content-profile">
-                        <a class="nav-link" href="../html/login.html"><i class="far fa-user"></i>Log In</a>
+                        <a class="nav-link" href="login.html"><i class="far fa-user"></i>Log In</a>
                     </li>
                 </ul>
             </div>
