--- a/html/statistics.html
+++ b/html/statistics.html
@@ -47,7 +47,9 @@
                        src="../asset/lottie/payment.json"></lottie-player>
 
         <nav class="navbar-expand-custom navbar-mainbg" id="navbar">
-            <a class="navbar-brand navbar-logo" href="#">Cyte</a>
+            <a class="navbar-brand navbar-logo" href="#">
+                <img alt="game logo" src="../asset/img/Asset 52.png" style="max-width: 60px; max-height: 100px;">
+            </a>
             <button aria-controls="navbar-content"
                     aria-expanded="false"
                     aria-label="toggle navigation"
@@ -68,8 +70,7 @@
                         <a class="nav-link" href="summon.html"><i class="fas fa-users"></i>Summon</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"
-                           href="characterprofile.html"><i class="far fa-address-book"></i>Character</a>
+                        <a class="nav-link" href="profile.html"><i class="far fa-address-book"></i>Character</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="statistics.html"><i class="far fa-chart-bar"></i>Statistics</a>
