--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                        src="../asset/lottie/loading-morandi-50.json"></lottie-player>
 
         <nav class="navbar-expand-custom navbar-mainbg" id="navbar">
-            <a class="navbar-brand navbar-logo" href="#"><img src="../asset/img/Asset 52.png" alt="game logo" style="max-width: 60px; max-height: 100px;"></a>
+            <a class="navbar-brand navbar-logo" href="#">
+                <img alt="game logo" src="../asset/img/Asset 52.png" style="max-width: 60px; max-height: 100px;">
+            </a>
             <button aria-controls="navbar-content"
                     aria-expanded="false"
                     aria-label="toggle navigation"
@@ -70,7 +72,10 @@
                         <a class="nav-link" href="html/summon.html"><i class="fas fa-users"></i>Summon</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/characterprofile.html"><i class="far fa-address-book"></i>Character</a>
+                        <a class="nav-link" href="html/profile.html"><i class="far fa-address-book"></i>Character</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="html/statistics.html"><i class="far fa-chart-bar"></i>Statistics</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="html/topup.html"><i class="fas fa-tachometer-alt"></i>TopUp</a>
