--- a/html/login.html
+++ b/html/login.html
@@ -37,6 +37,7 @@
                        speed="0.75"
                        src="../asset/lottie/loading-morandi-50.json"></lottie-player>
         <canvas id="canvas-background"></canvas>
+        <img alt="background-image" id="img-background" src="../asset/img/b-1.jpg" />
 
         <div class="wrap-center-vertical" id="d-login">
             <header id="hd-login">Login</header>
@@ -58,6 +59,7 @@
                     <small class="s-error-hint" id="fc-login-s-password-err"> Password isn't correct! </small>
                 </div>
 
+                <a href="signup.html">SignUp</a>
                 <button class="fc-login btn" id="btn-login" type="submit">Submit</button>
                 <div id="btn-click-tp" role="tooltip">
                     <lottie-player autoplay
