--- a/html/signup.html
+++ b/html/signup.html
@@ -27,7 +27,7 @@
         <link href="../css/lottie/loading.css" rel="stylesheet" type="text/css">
         <link href="../css/signup.css" rel="stylesheet" type="text/css">
         <link href="../css/util/meteor.css" rel="stylesheet" type="text/css">
-        
+
     </head>
 
     <body>
@@ -37,7 +37,7 @@
                        mode="bounce"
                        speed="0.75"
                        src="../asset/lottie/loading-morandi-50.json"></lottie-player>
-        <img alt="" id="background-image" src="https://images8.alphacoders.com/654/thumb-1920-654111.jpg">
+        <img alt="background-image" id="img-background" src="../asset/img/b-1.jpg" />
         <canvas id="canvas-background"></canvas>
 
         <!-- Here -->
