--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <nav class="navbar-expand-custom navbar-mainbg" id="navbar">
             <a class="navbar-brand navbar-logo" href="#">
-                <img alt="game logo" src="../asset/img/Asset 52.png" style="max-width: 60px; max-height: 100px;">
+                <img alt="game logo" src="asset/img/Asset 52.png" style="max-width: 60px; max-height: 100px;">
             </a>
             <button aria-controls="navbar-content"
                     aria-expanded="false"
